--- a/package.json
+++ b/package.json
@@ -105,8 +105,8 @@
     "metadata": [
         {
             "type": "script",
-            "namespace": "functions",
-            "path": "/scripts/functions.js"
+            "namespace": "api",
+            "path": "/scripts/api.js"
         },
         {
             "type": "flowStep",
