--- a/package.json
+++ b/package.json
@@ -44,11 +44,11 @@
                 "possibleValues": [
                     {
                         "label": "Sandbox",
-                        "name": "SANDBOX"
+                        "name": "sandbox"
                     },
                     {
                         "label": "Production",
-                        "name": "PRODUCTION"
+                        "name": "production"
                     }
                 ]
             }
@@ -64,28 +64,15 @@
             }
         },
         {
-            "name": "verifierToken",
+            "name": "webhooksVerifierToken",
             "label": "Webhooks Verifier Token",
-            "type": "text",
-            "required": false
-        },
-        {
-            "name": "configuration",
-            "label": "Configuration",
-            "value": "To obtain the requested fields for configuration you need to log in to your intuit developer account and go to <a href='https://developer.intuit.com/v2/ui#/playground' target='_blank'>Test connect to app (OAuth)</a>. On this page you need to: <ul><li>Complete the form selecting the app you want to configure on the endpoint.</li><li>Once you select the app the Client ID and Client Secret fields are being populated. You can copy this values to the endpoint configuration.</li><li>Select the Scopes (Accounting is the only available for now).</li><li>Click on Get authorization code and authorize the app.</li><li>Then click on Get Tokens button.</li><li>Once you have the Tokens you can start making calls to the API. On this screen you need to access to the step 4 and copy the Access Token and the Refresh Token to the endpoint configuration.</li></ul>",
-            "type": "info"
+            "type": "text"
         },
         {
             "name": "webhook",
             "label": "Webhook URL",
             "type": "label",
             "value": "@config.WEBHOOK_URL"
-        },
-        {
-            "name": "QUICKBOOKS_API_BASE_URL",
-            "label": "Quickbooks Api Url",
-            "type": "label",
-            "value": "https://quickbooks.api.intuit.com/v3"
         }
     ],
     "events": [
@@ -100,6 +87,16 @@
             "type": "script",
             "namespace": "api",
             "path": "/scripts/api.js"
+        },
+        {
+            "type": "script",
+            "namespace": "utils",
+            "path": "/scripts/utils.js"
+        },
+        {
+            "type": "listener",
+            "namespace": "webhook",
+            "path": "/listeners/webhook.js"
         }
     ]
 }
