Fix: wrong config keys and values

--- a/package.json
+++ b/package.json
@@ -44,11 +44,11 @@
                 "possibleValues": [
                     {
                         "label": "Sandbox",
-                        "name": "sandbox"
+                        "name": "SANDBOX"
                     },
                     {
                         "label": "Production",
-                        "name": "production"
+                        "name": "PRODUCTION"
                     }
                 ]
             }
