Update allowCustom option in package.json
Changed allowCustom option from true to false.

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
             "required": true,
             "defaultValue": "SANDBOX",
             "typeOptions": {
-                "allowCustom": true,
+                "allowCustom": false,
                 "possibleValues": [
                     {
                         "label": "Sandbox",
